@@ -68,7 +68,7 @@ function SWEP:PrimaryAttack()
 	if trace.Entity:OwnedBy(self.Owner) or (trace.Entity:GetNWBool("CPOwnable") and (Team == TEAM_CHIEF or Team == TEAM_POLICE or Team == TEAM_MAYOR)) then
 		trace.Entity:Fire("lock", "", 0)
 		self.Owner:EmitSound(self.Sound)
-		self.Weapon:SetNextPrimaryFire(CurTime() + 0.3)
+		self.Weapon:SetNextPrimaryFire(CurTime() + 0.1)
 	else
 		if trace.Entity:IsVehicle() then
 			Notify(self.Owner, 1, 3, "You don't own this vehicle!")
@@ -79,7 +79,7 @@ function SWEP:PrimaryAttack()
 			//"physics/wood/wood_crate_impact_hard2.wav"
 			//Notify(self.Owner, 1, 3, "You don't own this door!")
 		end
-		self.Weapon:SetNextPrimaryFire(CurTime() + 0.3)
+		self.Weapon:SetNextPrimaryFire(CurTime() + 0.1)
 	end
 end
 
@@ -105,7 +105,7 @@ function SWEP:SecondaryAttack()
 		trace.Entity:Fire("unlock", "", 0)
 
 		self.Owner:EmitSound(self.Sound)
-		self.Weapon:SetNextSecondaryFire(CurTime() + 0.3)
+		self.Weapon:SetNextSecondaryFire(CurTime() + 0.1)
 	else
 		if trace.Entity:IsVehicle() then
 			Notify(self.Owner, 1, 3, "You don't own this vehicle!")
@@ -113,7 +113,7 @@ function SWEP:SecondaryAttack()
 			self.Owner:EmitSound("physics/wood/wood_crate_impact_hard3.wav", 100, math.random(95, 105))
 			//Notify(self.Owner, 1, 3, "You don't own this door!")
 		end
-		self.Weapon:SetNextSecondaryFire(CurTime() + 0.3)
+		self.Weapon:SetNextSecondaryFire(CurTime() + 0.1)
 	end
 end
 
